force-app/main/default/objects/Donor_Payment_Received__c/Donor_Payment_Received__c.object-meta.xml
<CustomObject>
    <label>Donor Payment Received</label>
    <nameField>
        <displayFormat>SINV-{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donor Payments Received</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>