force-app/main/default/objects/Donor_Payment_Received__c/fields/Donor_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Donor_Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Payment Schedule</label>
    <referenceTo>Donor_Payment_Schedule__c</referenceTo>
    <relationshipLabel>Donor Payments Received</relationshipLabel>
    <relationshipName>Donor_Payments_Received</relationshipName>
    <type>Lookup</type>
</CustomField>