force-app/main/default/objects/Donor_Payment_Received__c/fields/Received_Currency__c.field-meta.xml
<CustomField>
    <fullName>Received_Currency__c</fullName>
    <formula>TEXT(Donor_Payment_Schedule__r.Exchange_Currency__c)</formula>
    <label>Received Currency</label>
    <type>Text</type>
</CustomField>