force-app/main/default/objects/Donor_Payment_Received__c/fields/Received_Exchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Exchange_Amount__c</fullName>
    <formula>Received_Amount__c  *  Donor_Payment_Schedule__r.Exchange_rate_to_GBP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received  Exchange Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>